--- a/views/productprice/productprice.ejs
+++ b/views/productprice/productprice.ejs
@@ -23,8 +23,8 @@
                         <div class="col-3">
                             <div class="row d-flex justify-content-end">
                                 <div class="dropdown no-arrow">
-                                    <button class="btn btn-outline-inventory dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="fas fa-table"></i> <span class="mobile-hidden">Table Options</span>
+                                    <button class="btn btn-outline-inventory dropdown-toggle ani-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <i class="fas fa-table btn-content"></i> <span class="mobile-hidden btn-content">Table Options</span>
                                     </button>
                                     <div class="dropdown-menu animated--fade-in" aria-labelledby="dropdownMenuButton">
                                         <div class="dropdown-item custom-checkbox">
