--- a/views/employees/employees.ejs
+++ b/views/employees/employees.ejs
@@ -9,7 +9,7 @@
                 </button>
             </div>
             <div class="custom-modal-body">
-                <div class="card shadow">
+                <div class="card">
                     <div class="card-header py-2 header-bg">
                         <h6 class="m-0 font-weight-bold table-title">Update Employees: </h6>
                     </div>
@@ -56,7 +56,7 @@
                 </button>
             </div>
             <div class="custom-modal-body">
-                <div class="card shadow">
+                <div class="card">
                     <div class="card-header py-2 header-bg">
                         <h6 class="m-0 font-weight-bold table-title">ARE YOU SURE YOU WANT TO DELETE THIS EMPLOYEE?</h6>
                     </div>
@@ -133,7 +133,7 @@
                         </div>
                         <div class="row d-flex justify-content-end">
                             <div class="col-md-2 align mt-2">
-                                <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
+                                <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory w-100">
                                     <i class="fa fa-plus" aria-hidden="true"></i>
                                     ADD
                                 </button>
@@ -148,7 +148,7 @@
     
 
 <!-- DataTales Example -->
-<div class="card shadow mb-4 table-size-lg">
+<div class="card mb-4 table-size-lg">
     <div class="card-header py-3 header-bg">
         <div class="row">
             <div class="col-md-4">
