--- a/views/productprice/productpricescripts.ejs
+++ b/views/productprice/productpricescripts.ejs
@@ -174,6 +174,32 @@ $(document).ready(function () {
 
         XLSX.writeFile(wb, 'exported_data.xlsx');
     });
+
+    buttonAni = document.querySelector('.ani-btn');
+
+    buttonAni.addEventListener('click', e => buttonPress(e));
+
+    function buttonPress(e) {
+        const offset = buttonAni.getBoundingClientRect();
+        const newX = e.clientX - offset.left;
+        const newY = e.clientY - offset.top;
+        const color = getComputedStyle(buttonAni).backgroundColor;
+        let size = 0;
+        let opacity = 0.25;
+
+        function btnClick() {
+            size += 3; 
+            opacity -= 0.004; 
+            buttonAni.style.background = `${color} radial-gradient(circle at ${newX}px ${newY}px, rgba(1, 8, 22, ${opacity}) ${size}%, transparent ${size + 2}%) no-repeat`;
+            if (size <= 300) {
+                requestAnimationFrame(btnClick);
+            } else {
+                buttonAni.style.background = '';
+            }
+        }
+
+        btnClick();
+    }
 })
     
 </script>
