--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -30,7 +30,7 @@
     <li class="nav-item">
         <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
             aria-controls="collapseTwo">
-            <i class="fas fa-fw fa-cog text-white"></i>
+            <i class="fas fa-fw fa-cog"></i>
             <span class="text-white">Masters</span>
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
@@ -42,6 +42,12 @@
                 <a class="collapse-item" href="/position">
                     <span>Position Type</span>
                 </a>
+                <a class="collapse-item" href="/category">
+                    <span>Category</span>
+                </a>
+                <a class="collapse-item" href="/location">
+                    <span>Location</span>
+                </a>
                 <a class="collapse-item" href="/users">
                     <span>Users</span>
                 </a>
@@ -51,17 +57,11 @@
                 <a class="collapse-item" href="/products">
                     <span>Products</span>
                 </a>
-                <a class="collapse-item" href="/category">
-                    <span>Category</span>
-                </a>
                 <a class="collapse-item" href="/pos">
                     <span>POS</span>
                 </a>
                 <a class="collapse-item" href="/branch">
                     <span>Branch</span>
-                </a>
-                <a class="collapse-item" href="/location">
-                    <span>Location</span>
                 </a>
                 <a class="collapse-item" href="/vendors">
                     <span>Vendor</span>
@@ -77,7 +77,7 @@
     <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTransactions"
             aria-expanded="true" aria-controls="collapseTransactions">
-            <i class="fas fa-hand-holding-usd text-white"></i>
+            <i class="fas fa-hand-holding-usd"></i>
             <span class="text-white">Transanctions</span>
         </a>
         <div id="collapseTransactions" class="collapse" aria-labelledby="headingTransactions"
@@ -110,27 +110,21 @@
     <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseInventory"
             aria-expanded="true" aria-controls="collapseInventory">
-            <i class="fas fa-boxes text-white"></i>
+            <i class="fas fa-boxes"></i>
             <span class="text-white">Inventory</span>
         </a>
         <div id="collapseInventory" class="collapse" aria-labelledby="headingTransactions"
             data-parent="#accordionSidebar">
             <div class="bg-options py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Contents:</h6>
-                <a class="collapse-item" href="/purchaseorder">
-                    <span>Purchase Order</span>
-                </a>
-                <a class="collapse-item" href="/transferorder">
-                    <span>Transfer Orders</span>
-                </a>
                 <a class="collapse-item" href="/inventorycount">
                     <span>Inventory Counts</span>
                 </a>
                 <a class="collapse-item" href="#">
-                    <span>Stock Adjustment</span>
+                    <span>Inventory History</span>
                 </a>
                 <a class="collapse-item" href="#">
-                    <span>Inventory History</span>
+                    <span>Stock Adjustment</span>
                 </a>
                 <a class="collapse-item" href="#">
                     <span>Valuation Report</span>
@@ -141,6 +135,27 @@
                 <a class="collapse-item" href="/systemlogs">
                     <span>System Logs</span>
                 </a>
+            </div>
+        </div>
+    </li>
+
+    <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseRequest"
+            aria-expanded="true" aria-controls="collapseRequest">
+            <i class="fas fa-handshake"></i>
+            <span class="text-white">Request</span>
+        </a>
+        <div id="collapseRequest" class="collapse" aria-labelledby="headingTransactions"
+            data-parent="#accordionSidebar">
+            <div class="bg-options py-2 collapse-inner rounded">
+                <h6 class="collapse-header">Contents:</h6>
+                <a class="collapse-item" href="/purchaseorder">
+                    <span>Purchase Order</span>
+                </a>
+                <a class="collapse-item" href="/transferorder">
+                    <span>Transfer Orders</span>
+                </a>
+
             </div>
         </div>
     </li>
