--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -9,7 +9,7 @@
                 </button>
             </div>
             <div class="custom-modal-body">
-                <div class="card shadow">
+                <div class="card">
                     <div class="card-header py-2 header-bg">
                         <h6 class="m-0 font-weight-bold table-title">Update User Password: </h6>
                     </div>
@@ -52,95 +52,108 @@
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
     <!-- Content Row -->
-    <div class="row mb-2">
-        <div class="col-lg-12">
-            <div class="card">
-                <div class="card-header py-3 header-bg">
-                    <h6 class="m-0 font-weight-bold">Users</h6>
+    <div class="toggle-view">
+        <div class="row mb-2">
+            <div class="col-lg-12">
+                <div class="card">
+                    <div class="card-header py-3 header-bg">
+                        <h6 class="m-0 font-weight-bold">Users</h6>
+                    </div>
+                    <div class="card-body extend">
+                        <div class="row mb-2">
+                            <div class="col-md-6">
+                                <div class="input-group">
+                                    <input class="form-control text-center custom-input" placeholder="Select/Input Position" name="positionname" id="positionname"/>
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">Position</span>
+                                    </div>
+                                </div>
+                                <div class="custom-dropdown" id="positionDropdown">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="input-group">
+                                    <input class="form-control text-center custom-input" placeholder="Select/Input Access" name="accessname" id="accessname"/>
+                                    <div class="input-group-append">
+                                        <span class="input-group-text label-width-2">Access Type</span>
+                                    </div>
+                                </div>
+                                <div class="custom-dropdown" id="accessDropdown">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-md-6 mmb">
+                                <div class="input-group">
+                                    <select class="form-control text-center" name="employeelist" id="employeelist">
+                                        <option value="">-- Select here --</option>
+                                    </select>    
+                                    <div class="input-group-append">
+                                        <span class="input-group-text label-width-2" id="basic-addon2">Employee ID</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-end">
+                            <div class="col-md-2 align mt-3">
+                                <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory-sm w-100">
+                                    <i class="fa fa-plus" aria-hidden="true"></i>
+                                    ADD
+                                </button>
+                            </div>
+                        </div>
+                    </div>      
                 </div>
-                <div class="card-body extend">
-                    <div class="row mb-2">
-                        <div class="col-md-6 mmb">
-                            <div class="input-group">
-                                <select class="form-control text-center" name="employeelist" id="employeelist">
-                                    <option value="">-- Select here --</option>
-                                </select>    
-                                <div class="input-group-append">
-                                    <span class="input-group-text label-width-2" id="basic-addon2">Employee ID</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="input-group">
-                                <input class="form-control text-center custom-input" placeholder="Select/Input Access" name="accessname" id="accessname"/>
-                                <div class="input-group-append">
-                                    <span class="input-group-text label-width-2">Access Type</span>
-                                </div>
-                            </div>
-                            <div class="custom-dropdown" id="accessDropdown">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row d-flex justify-content-center">
-                        <div class="col-md-6">
-                            <div class="input-group">
-                                <input class="form-control text-center custom-input" placeholder="Select/Input Position" name="positionname" id="positionname"/>
-                                <div class="input-group-append">
-                                    <span class="input-group-text">Position</span>
-                                </div>
-                            </div>
-                            <div class="custom-dropdown" id="positionDropdown">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row d-flex justify-content-end">
-                        <div class="col-md-2 align mt-3">
-                            <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
-                                <i class="fa fa-plus" aria-hidden="true"></i>
-                                ADD
-                            </button>
-                        </div>
-                    </div>
-                </div>      
             </div>
         </div>
     </div>
 
 <!-- DataTales Example -->
-<div class="card shadow mb-4 table-size">
+<div class="card mb-4 table-size-lg">
     <div class="card-header py-3 header-bg">
         <div class="row">
-            <div class="col-md-6">
-                <h6 class="mt-2 font-weight-bold table-title">Users Data:</h6>
+            <div class="col-md-4">
+                <div class="row mb-2">
+                    <button id="toggleButton" name="toggleButton" class=" ml-3 btn btn-circle btn-outline-inventory ">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
+                    <h6 class="mt-2 ml-3 font-weight-bold table-title">User Data</h6>
+                </div>   
             </div>
-            <div class="col-md-6">
-                <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small"
-                        placeholder="Search for..." aria-label="Search"
-                        aria-describedby="basic-addon2" id="search-input">
-                    <div class="input-group-append">
-                        <button class="btn sis-btn-color" type="button" id="search-button">
-                            <i class="fas fa-search fa-sm"></i>
-                        </button>
+            <div class="col-md-8">
+                <div class="row ">
+                    <div class="col-10">
+                        <div class="row justify-content-center">
+                            <div class="input-group">
+                                <input type="text" class="form-control bg-light border-0 small"
+                                    placeholder="Search for..." aria-label="Search"
+                                    aria-describedby="basic-addon2" id="search-input">
+                                <div class="input-group-append">
+                                    <button class="btn sis-btn-color" type="button" id="search-button">
+                                        <i class="fas fa-search fa-sm"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container">
+        <div class="table-responsive scrollable-table-container-lg">
             <table class="table table-bordered custom-mobile-table" id="users-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">User Code</th>
                         <th class = "col-1">Employee ID</th>
                         <th class = "col-1">Access Type</th>
-                        <th class = "col-1">Position Type</th>
+                        <th class = "col-2">Position Type</th>
                         <th class = "col-1">Username</th>
                         <th class = "col-2">Created by</th>
                         <th class = "col-2">Created date</th>
                         <th class = "col-1">Status</th>
-                        <th class = "col-2">Action</th>               
+                        <th class = "col-1">Action</th>               
                     </tr>
                 </thead>
                     
