Updated sales details script

--- a/views/salesdetails/salesdetailsscripts.ejs
+++ b/views/salesdetails/salesdetailsscripts.ejs
@@ -137,7 +137,7 @@
 
             $.ajax({
                 url: '/salesdetails/load',
-                method: 'GET',
+                method: 'POST',
                 dataType: 'json',
                 data: {
                     shift: shiftValue,
