Added display for Production Materials and scripts(save, edit, load, status)

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -129,9 +129,6 @@
                 <a class="collapse-item" href="#">
                     <span>Valuation Report</span>
                 </a>
-                <a class="collapse-item" href="#">
-                    <span>Production</span>
-                </a>
                 <a class="collapse-item" href="/systemlogs">
                     <span>System Logs</span>
                 </a>
@@ -157,6 +154,36 @@
                 </a>
 
             </div>
+        </div>
+    </li>
+
+    <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseProduction"
+            aria-expanded="true" aria-controls="collapseProduction">
+            <i class="fas fa-handshake"></i>
+            <span class="text-white">Production</span>
+        </a>
+        <div id="collapseProduction" class="collapse" aria-labelledby="headingTransactions"
+            data-parent="#accordionSidebar">
+            <div class="bg-options py-2 collapse-inner rounded">
+                <h6 class="collapse-header">Contents:</h6>
+                <a class="collapse-item" href="#">
+                    <span>Production</span>
+                </a>
+                <a class="collapse-item" href="/productionmaterials">
+                    <span>Materials</span>
+                </a>
+                <a class="collapse-item" href="#">
+                    <span>Material Count</span>
+                </a>
+                <a class="collapse-item" href="#">
+                    <span>Cost</span>
+                </a>
+                <a class="collapse-item" href="#">
+                    <span>Logs</span>
+                </a>
+            </div>
+            
         </div>
     </li>
 
