--- a/views/pos/pos.ejs
+++ b/views/pos/pos.ejs
@@ -63,14 +63,6 @@
                     </div>
                     <div class="card-body extend">
                         <div class="row mb-2">
-                            <div class="col-md-6 mmb">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text" id="basic-addon2">POS ID</span>
-                                    </div>
-                                    <input id="posid" name="posid" type="text" class="form-control" placeholder="Enter POS ID" aria-label="posid" aria-describedby="basic-addon1">
-                                </div>
-                            </div>
                             <div class="col-md-6">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
@@ -79,8 +71,6 @@
                                     <input id="posname" name="posname" type="text" class="form-control" placeholder="Enter POS Name" aria-label="posname" aria-describedby="basic-addon1">
                                 </div>
                             </div>
-                        </div>
-                        <div class="row mb-2">
                             <div class="col-md-6 mmb">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
@@ -89,6 +79,8 @@
                                     <input class="form-control" placeholder="Enter Serial" name="serial" id="serial"/>
                                 </div>
                             </div>
+                        </div>
+                        <div class="row mb-2">
                             <div class="col-md-6">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
@@ -97,8 +89,6 @@
                                     <input id="min" name="min" type="text" class="form-control" placeholder="Enter MIN" aria-label="min" aria-describedby="basic-addon1">
                                 </div>
                             </div>
-                        </div>
-                        <div class="row mb-2 justify-content-center">
                             <div class="col-md-6 mmb">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
@@ -124,6 +114,10 @@
     
 <!-- DataTales Example -->
 <div class="card shadow mb-4 table-size-lg">
+    <div class="progress progress-sm mb-2">
+        <div class="progress-bar" role="progressbar" style="width: 0%"
+            aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
     <div class="card-header py-3 header-bg">
         <div class="row">
             <div class="col-md-4">
