--- a/views/productionmaterials/productionmaterials.ejs
+++ b/views/productionmaterials/productionmaterials.ejs
@@ -137,60 +137,60 @@
     </div>   
     
 
-<!-- DataTales Example -->
-<div class="card mb-4 table-size-lg">
-    <div class="card-header py-3 header-bg">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="row mb-2">
-                    <button id="toggleButton" name="toggleButton" class=" ml-3 btn btn-circle btn-outline-inventory ">
-                        <i class="fas fa-chevron-right"></i>
-                    </button>
-                    <h6 class="mt-2 ml-3 font-weight-bold table-title">Employees</h6>
-                </div>   
-            </div>
-            <div class="col-md-8">
-                <div class="row ">
-                    <div class="col-10">
-                        <div class="row justify-content-center">
-                            <div class="input-group">
-                                <input type="text" class="form-control bg-light border-0 small"
-                                    placeholder="Search for..." aria-label="Search"
-                                    aria-describedby="basic-addon2" id="search-input">
-                                <div class="input-group-append">
-                                    <button class="btn sis-btn-color" type="button" id="search-button">
-                                        <i class="fas fa-search fa-sm"></i>
-                                    </button>
+    <!-- DataTales Example -->
+    <div class="card mb-4 table-size-lg">
+        <div class="card-header py-3 header-bg">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="row mb-2">
+                        <button id="toggleButton" name="toggleButton" class=" ml-3 btn btn-circle btn-outline-inventory ">
+                            <i class="fas fa-chevron-right"></i>
+                        </button>
+                        <h6 class="mt-2 ml-3 font-weight-bold table-title">Production Materials</h6>
+                    </div>   
+                </div>
+                <div class="col-md-8">
+                    <div class="row ">
+                        <div class="col-10">
+                            <div class="row justify-content-center">
+                                <div class="input-group">
+                                    <input type="text" class="form-control bg-light border-0 small"
+                                        placeholder="Search for..." aria-label="Search"
+                                        aria-describedby="basic-addon2" id="search-input">
+                                    <div class="input-group-append">
+                                        <button class="btn sis-btn-color" type="button" id="search-button">
+                                            <i class="fas fa-search fa-sm"></i>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        
                     </div>
-                    
                 </div>
             </div>
         </div>
-    </div>
-    <div class="card-body">
-        <div class="table-responsive scrollable-table-container-lg">
-            <table class="table table-bordered custom-mobile-table" id="employees-dataTable" width="100%" cellspacing="10">
-                <thead class="table-header">
-                    <tr>
-                        <th class = "col-1">Product ID</th>
-                        <th class = "col-1">Product Name</th>
-                        <th class = "col-2">Description</th>
-                        <th class = "col-1">Category</th>
-                        <th class = "col-1">Vendor ID</th>
-                        <th class = "col-1">Price</th>
-                        <th class = "col-2">Created by</th>
-                        <th class = "col-1">Created date</th>
-                        <th class = "col-1">Status</th>
-                        <th class = "col-1">Action</th>               
-                    </tr>
-                </thead>
-                    
-                <tbody>
-                </tbody>
-            </table>
+        <div class="card-body">
+            <div class="table-responsive scrollable-table-container-lg">
+                <table class="table table-bordered custom-mobile-table" id="employees-dataTable" width="100%" cellspacing="10">
+                    <thead class="table-header">
+                        <tr>
+                            <th class = "col-1">Product ID</th>
+                            <th class = "col-1">Product Name</th>
+                            <th class = "col-2">Description</th>
+                            <th class = "col-1">Category</th>
+                            <th class = "col-1">Vendor ID</th>
+                            <th class = "col-1">Price</th>
+                            <th class = "col-2">Created by</th>
+                            <th class = "col-1">Created date</th>
+                            <th class = "col-1">Status</th>
+                            <th class = "col-1">Action</th>               
+                        </tr>
+                    </thead>
+                        
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-</div>
