--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -3,7 +3,7 @@
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/index">
         <div class="sidebar-brand-icon">
-            <img src="/images/img/asvesti.png" class="img-fluid mt-1 mb-1" alt="Responsive image">
+            <img src="/images/img/asvesti.png" class="custom-img mt-1 mb-1" alt="Responsive image">
         </div>
         <div class="sidebar-brand-text mx-3 text-white">Sales Inventory</div>
     </a>
@@ -175,6 +175,9 @@
                 </a>
                 <a class="collapse-item" href="#">
                     <span>Material Count</span>
+                </a>
+                <a class="collapse-item" href="#">
+                    <span>Components</span>
                 </a>
                 <a class="collapse-item" href="#">
                     <span>Cost</span>
