--- a/views/access/access.ejs
+++ b/views/access/access.ejs
@@ -75,6 +75,10 @@
     </div>
 
 <div class="card  mb-4 table-size">
+    <div class="progress progress-sm mb-2">
+        <div class="progress-bar" role="progressbar" style="width: 0%"
+            aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
     <div class="card-header py-3 header-bg">
         <div class="row">
             <div class="col-md-6">
