--- a/views/employees/employeesscripts.ejs
+++ b/views/employees/employeesscripts.ejs
@@ -137,16 +137,31 @@ $(document).ready(function () {
     }
 
     function LoadTable() {
+        $(".progress").hide();
+        $(".progress").slideDown();
+
         $.ajax({
             url: '/employees/load',
             method: 'GET',
             dataType: 'json',
-            success: function (data) {
-                if (data.msg === 'success') {
-                    populateEmployeesTable(data.data);
-                } else {
-                    console.error(data.msg);
+            xhrFields: {
+                onprogress: function (e) {
+                    if (e.lengthComputable) {
+                        var percentComplete = (e.loaded / e.total) * 100;
+                        $(".progress-bar").css("width", percentComplete + "%");
+                    }
                 }
+            },
+            success: function (data) {
+                setTimeout(function () {
+                    $(".progress").slideUp(function () {
+                        if (data.msg === 'success') {
+                            populateEmployeesTable(data.data);
+                        } else {
+                            console.error(data.msg);
+                        }
+                    });
+                }, 1000);
             },
             error: function (error) {
                 console.error(error);
@@ -409,25 +424,24 @@ $(document).ready(function () {
     setupCustomDropdown("positionname", "positionDropdown", "dropdown-option");
 
     const toggleButton = document.getElementById("toggleButton");
-
     const toggleView = document.querySelector(".toggle-view");
 
+    let isOpen = false; 
+
     toggleButton.addEventListener("click", function() {
-        if (toggleView.style.display === "none" || toggleView.style.display === "") {
+        if (!isOpen) {
             toggleView.style.display = "block";
-            setTimeout(() => {
-                toggleView.style.opacity = "1";
-                toggleView.style.height = "auto";
-            }, 10);
+            toggleView.style.height = toggleView.scrollHeight + "px"; 
             toggleButton.innerHTML = '<i class="fas fa-chevron-up"></i>';
         } else {
-            toggleView.style.opacity = "0";
             toggleView.style.height = "0";
             setTimeout(() => {
-                toggleView.style.display = "none";
-            }, 500); 
+            toggleView.style.display = "none";
+            }, 500);
             toggleButton.innerHTML = '<i class="fas fa-chevron-right"></i>';
         }
+
+        isOpen = !isOpen;
     });
 
 })
