--- a/views/pos/posscripts.ejs
+++ b/views/pos/posscripts.ejs
@@ -175,26 +175,39 @@
         }
 
         function LoadTable() {
+            $(".progress").hide();
+            $(".progress").slideDown();
+
             $.ajax({
                 url: '/pos/load',
                 method: 'GET',
                 dataType: 'json',
-                success: function(data) {
-                    if (data.msg === 'success') {
-                        populatePosTable(data.data);
-                    } else {
-                        console.error(data.msg);
+                xhrFields: {
+                    onprogress: function (e) {
+                        if (e.lengthComputable) {
+                            var percentComplete = (e.loaded / e.total) * 100;
+                            $(".progress-bar").css("width", percentComplete + "%");
+                        }
                     }
                 },
-                error: function(error) {
+                success: function (data) {
+                    setTimeout(function () {
+                        $(".progress").slideUp(function () {
+                            if (data.msg === 'success') {
+                                populatePosTable(data.data);
+                            } else {
+                                console.error(data.msg);
+                            }
+                        });
+                    }, 1000); 
+                },
+                error: function (error) {
                     console.error(error);
                 }
             });
-
         }
 
         $(document).on('click', '#updateBtn', function () {
-            let posid = $('#posidmodal').val();
             let posname = $('#posnamemodal').val();
             let serial = $('#serialmodal').val();
             let min = $('#minmodal').val();
@@ -232,7 +245,7 @@
                         }
 
                         if (result.msg == 'exist') {
-                            warning('Exist', `${positionname} already exist!`);
+                            warning('Exist', `${posname} already exist!`);
                         }
 
                     },
@@ -275,25 +288,24 @@
         $('#search-input').on('input', filterTableRows);
 
         const toggleButton = document.getElementById("toggleButton");
-
         const toggleView = document.querySelector(".toggle-view");
 
+        let isOpen = false; 
+
         toggleButton.addEventListener("click", function() {
-            if (toggleView.style.display === "none" || toggleView.style.display === "") {
+            if (!isOpen) {
                 toggleView.style.display = "block";
-                setTimeout(() => {
-                    toggleView.style.opacity = "1";
-                    toggleView.style.height = "auto";
-                }, 10);
+                toggleView.style.height = toggleView.scrollHeight + "px"; 
                 toggleButton.innerHTML = '<i class="fas fa-chevron-up"></i>';
             } else {
-                toggleView.style.opacity = "0";
                 toggleView.style.height = "0";
                 setTimeout(() => {
-                    toggleView.style.display = "none";
-                }, 500); 
+                toggleView.style.display = "none";
+                }, 500);
                 toggleButton.innerHTML = '<i class="fas fa-chevron-right"></i>';
             }
+
+            isOpen = !isOpen;
         });
     })
 </script>
