--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -96,7 +96,7 @@
                         </div>
                         <div class="row d-flex justify-content-end">
                             <div class="col-md-2 align mt-3">
-                                <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory-sm w-100">
+                                <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
                                     <i class="fa fa-plus" aria-hidden="true"></i>
                                     ADD
                                 </button>
@@ -110,6 +110,10 @@
 
 <!-- DataTales Example -->
 <div class="card mb-4 table-size-lg">
+    <div class="progress progress-sm mb-2">
+        <div class="progress-bar" role="progressbar" style="width: 0%"
+            aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
     <div class="card-header py-3 header-bg">
         <div class="row">
             <div class="col-md-4">
