Added loading state and animations for Requests and Transactions

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -160,7 +160,7 @@
     <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseProduction"
             aria-expanded="true" aria-controls="collapseProduction">
-            <i class="fas fa-handshake"></i>
+            <i class="fab fa-product-hunt"></i>
             <span class="text-white">Production</span>
         </a>
         <div id="collapseProduction" class="collapse" aria-labelledby="headingTransactions"
