--- a/views/pricechange/pricechange.ejs
+++ b/views/pricechange/pricechange.ejs
@@ -1,6 +1,11 @@
 
 <div class="container-fluid">
     <div class="card shadow mb-4 table-size">
+        <div class="progress progress-sm mb-2">
+            <div class="progress-bar" role="progressbar" style="width: 0%"
+                aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+            </div>
+        </div>
         <div class="card-header py-3 header-bg">
             <div class="row">
                 <div class="col-md-6">
