--- a/views/pricechange/pricechangescripts.ejs
+++ b/views/pricechange/pricechangescripts.ejs
@@ -52,22 +52,36 @@
         }
         
         function LoadTable() {
+            $(".progress").hide();
+            $(".progress").slideDown();
+
             $.ajax({
                 url: '/pricechange/load',
                 method: 'GET',
                 dataType: 'json',
-                success: function(data) {
-                    if (data.msg === 'success') {
-                        populatePriceChangeTable(data.data);
-                    } else {
-                        console.error(data.msg);
+                xhrFields: {
+                    onprogress: function (e) {
+                        if (e.lengthComputable) {
+                            var percentComplete = (e.loaded / e.total) * 100;
+                            $(".progress-bar").css("width", percentComplete + "%");
+                        }
                     }
                 },
-                error: function(error) {
+                success: function (data) {
+                    setTimeout(function () {
+                        $(".progress").slideUp(function () {
+                            if (data.msg === 'success') {
+                                populatePriceChangeTable(data.data);
+                            } else {
+                                console.error(data.msg);
+                            }
+                        });
+                    }, 1000);
+                },
+                error: function (error) {
                     console.error(error);
                 }
             });
-
         }
 
         function filterTableRows() {
