--- a/views/productprice/productpricescripts.ejs
+++ b/views/productprice/productpricescripts.ejs
@@ -90,41 +90,56 @@ $(document).ready(function () {
         }
 
         function LoadTable() {
+            $(".progress").hide();
+            $(".progress").slideDown();
+
             $.ajax({
                 url: '/productprice/load',
                 method: 'GET',
                 dataType: 'json',
-                success: function(data) {
-                    if (data.msg === 'success') {
-                        populateProductPriceTable(data.data);
-                        const table = $('#productprice-dataTable').DataTable({
-                            info: false,
-                            searching: false,
-                            paging: false,
-                            scrollCollapse: false,
-                        });
-
-                        $('.custom-checkbox input[type="checkbox"]').each(function () {
-                            const index = $(this).closest('.dropdown-item').index();
-                            if (!$(this).is(':checked')) {
-                                table.column(index).visible(false);
-                            }
-                        });
-
-                        $('.custom-checkbox input[type="checkbox"]').change(function () {
-                            const index = $(this).closest('.dropdown-item').index();
-                            if ($(this).is(':checked')) {
-                                table.column(index).visible(true);
-                            } else {
-                                table.column(index).visible(false);
-                            }
-                        });
-
-                    } else {
-                        console.error(data.msg);
+                xhrFields: {
+                    onprogress: function (e) {
+                        if (e.lengthComputable) {
+                            var percentComplete = (e.loaded / e.total) * 100;
+                            $(".progress-bar").css("width", percentComplete + "%");
+                        }
                     }
                 },
-                error: function(error) {
+                success: function (data) {
+                    setTimeout(function () {
+                        $(".progress").slideUp(function () {
+                            if (data.msg === 'success') {
+                                populateProductPriceTable(data.data);
+                                const table = $('#productprice-dataTable').DataTable({
+                                    info: false,
+                                    searching: false,
+                                    paging: false,
+                                    scrollCollapse: false,
+                                });
+
+                                $('.custom-checkbox input[type="checkbox"]').each(function () {
+                                    const index = $(this).closest('.dropdown-item').index();
+                                    if (!$(this).is(':checked')) {
+                                        table.column(index).visible(false);
+                                    }
+                                });
+
+                                $('.custom-checkbox input[type="checkbox"]').change(function () {
+                                    const index = $(this).closest('.dropdown-item').index();
+                                    if ($(this).is(':checked')) {
+                                        table.column(index).visible(true);
+                                    } else {
+                                        table.column(index).visible(false);
+                                    }
+                                });
+
+                            } else {
+                                console.error(data.msg);
+                            }
+                        });
+                    }, 1000); 
+                },
+                error: function (error) {
                     console.error(error);
                 }
             });
