--- a/views/purchaseorder/purchaseorder.ejs
+++ b/views/purchaseorder/purchaseorder.ejs
@@ -43,111 +43,120 @@
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
     <!-- Content Row -->
-    <div class="row mb-2">
-        <div class="col-lg-12">
-            <div class="card">
-                <div class="card-header py-3 header-bg">
-                    <h6 class="m-0 font-weight-bold">Purchase Order</h6>
-                </div>
-                <div class="card-body extend">
-                    <div class="row mb-2">
-                        <div class="col-md-6">
-                            <div class="input-group mb-2">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text label-width-2">Vendor ID</span>
-                                </div>
-                                <input class="form-control text-center custom-input" placeholder="Select/Input Vendor" name="vendorid" id="vendorid"/>
+    <div class="toggle-view">
+        <div class="card mb-2">
+            <div class="card-header py-3 header-bg">
+                <h6 class="m-0 font-weight-bold">Purchase Order</h6>
+            </div>
+            <div class="card-body extend">
+                <div class="row mb-2">
+                    <div class="col-md-6">
+                        <div class="input-group mb-2">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text label-width-2">Vendor ID</span>
                             </div>
-                            <div class="custom-dropdown" id="vendoridDropdown">
+                            <input class="form-control text-center custom-input" placeholder="Select/Input Vendor" name="vendorid" id="vendorid"/>
+                        </div>
+                        <div class="custom-dropdown" id="vendoridDropdown">
+                        </div>
+                        <div class="row mb-2">
+                            <div class="col-8">
+                                <label class="">Items</label>
+                                <select class="form-control text-center" name="itemlists" id="itemlists">
+                                    <option value="">-- Select here --</option>
+                                </select>  
                             </div>
-                            <div class="row mb-2">
-                                <div class="col-8">
-                                    <label class="">Items</label>
-                                    <select class="form-control text-center" name="itemlists" id="itemlists">
-                                        <option value="">-- Select here --</option>
-                                    </select>  
-                                </div>
-                                <div class="col-4">
-                                    <label for="itemquantities">Quantity</label>
-                                    <input id="itemquantities" name="itemquantities" type="text" class="form-control quantity-input" placeholder="Enter Quantity" aria-label="deliverymethod" aria-describedby="basic-addon1">
-                                </div>
-                            </div>
-                            <div class="row justify-content-end mb-2">
-                                <div class="col-4">
-                                    <button id="additemBtn" name="additemBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
-                                        <i class="fa fa-plus" aria-hidden="true"></i>
-                                        ADD
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="input-group mb-2">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon2">Date Order</span>
-                                </div>
-                                <input id="orderdate" name="orderdate" type="date" class="form-control" placeholder="Enter POS Name" aria-label="orderdate" aria-describedby="basic-addon1">
-                            </div>
-                            <div class="input-group mb-2">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">Date Needed</span>
-                                </div>
-                                <input class="form-control" type="date" placeholder="Enter Serial" name="deliverydate" id="deliverydate"/>
-                            </div>
-                            <div class="input-group mb-2">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon2">Payment Term</span>
-                                </div>
-                                <input id="paymentterms" name="paymentterms" type="text" class="form-control" placeholder="Enter Payment terms" aria-label="paymentterms" aria-describedby="basic-addon1">
-                            </div>
-                            <div class="input-group mb-2">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon2">Payment Method</span>
-                                </div>
-                                <input id="deliverymethod" name="deliverymethod" type="text" class="form-control" placeholder="Enter Delivery Method" aria-label="deliverymethod" aria-describedby="basic-addon1">
+                            <div class="col-4">
+                                <label for="itemquantities">Quantity</label>
+                                <input id="itemquantities" name="itemquantities" type="text" class="form-control quantity-input" placeholder="Enter Quantity" aria-label="deliverymethod" aria-describedby="basic-addon1">
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="table-responsive scrollable-table-container-sm">
-                                <table class="table table-bordered custom-mobile-table" id="items-dataTable" width="100%" cellspacing="10">
-                                    <thead class="table-header">
-                                        <tr>
-                                            <th class = "col-2">Description</th>
-                                            <th class = "col-1">Unit/s</th>
-                                            <th class = "col-1">Cost</th>   
-                                            <th class = "col-2">Quantity</th>   
-                                            <th class = "col-1">Total Cost</th> 
-                                            <th class = "col-1">Action</th>        
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                    </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <td colspan="4" class="text-right">Total:</td>
-                                            <td id="total-cost" colspan="2">₱0.00</td>
-                                        </tr>
-                                    </tfoot>
-                                </table>
+                        <div class="row justify-content-end mb-2">
+                            <div class="col-4">
+                                <button id="additemBtn" name="additemBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
+                                    <i class="fa fa-plus" aria-hidden="true"></i>
+                                    ADD
+                                </button>
                             </div>
-                            <div class="row justify-content-end">
-                                <div class="col-md-4">
-                                    <button id="submitRequest" name="submitRequest" class="btn btn-outline-inventory shadow-sm w-100">
-                                        SUBMIT
-                                    </button>
-                                </div>
+                        </div>
+                        <div class="input-group mb-2">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="basic-addon2">Date Order</span>
+                            </div>
+                            <input id="orderdate" name="orderdate" type="date" class="form-control" placeholder="Enter POS Name" aria-label="orderdate" aria-describedby="basic-addon1">
+                        </div>
+                        <div class="input-group mb-2">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">Date Needed</span>
+                            </div>
+                            <input class="form-control" type="date" placeholder="Enter Serial" name="deliverydate" id="deliverydate"/>
+                        </div>
+                        <div class="input-group mb-2">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="basic-addon2">Payment Term</span>
+                            </div>
+                            <input id="paymentterms" name="paymentterms" type="text" class="form-control" placeholder="Enter Payment terms" aria-label="paymentterms" aria-describedby="basic-addon1">
+                        </div>
+                        <div class="input-group mb-2">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="basic-addon2">Payment Method</span>
+                            </div>
+                            <input id="deliverymethod" name="deliverymethod" type="text" class="form-control" placeholder="Enter Delivery Method" aria-label="deliverymethod" aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="table-responsive scrollable-table-container-sm">
+                            <table class="table table-bordered custom-mobile-table" id="items-dataTable" width="100%" cellspacing="10">
+                                <thead class="table-header">
+                                    <tr>
+                                        <th class = "col-2">Description</th>
+                                        <th class = "col-1">Unit/s</th>
+                                        <th class = "col-1">Cost</th>   
+                                        <th class = "col-2">Quantity</th>   
+                                        <th class = "col-1">Total Cost</th> 
+                                        <th class = "col-1">Action</th>        
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <td colspan="4" class="text-right">Total:</td>
+                                        <td id="total-cost" colspan="2">₱0.00</td>
+                                    </tr>
+                                </tfoot>
+                            </table>
+                        </div>
+                        <div class="row justify-content-end">
+                            <div class="col-md-4">
+                                <button id="submitRequest" name="submitRequest" class="btn btn-outline-inventory shadow-sm w-100">
+                                    SUBMIT
+                                </button>
                             </div>
                         </div>
                     </div>
-                </div>      
-            </div>
+                </div>
+            </div>      
         </div>
     </div>
+        
 
 <!-- DataTales Example -->
-<div class="card shadow mb-4 table-size">
+<div class="card shadow mb-4 table-size-lg">
+    <div class="progress progress-sm mb-2">
+        <div class="progress-bar" role="progressbar" style="width: 0%"
+            aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+        </div>
+    </div>
     <div class="card-header py-3 header-bg">
         <div class="row">
             <div class="col-md-6">
-                <h6 class="mt-2 font-weight-bold table-title">Purchase Order Data:</h6>
+                <div class="row mb-2">
+                    <button id="toggleButton" name="toggleButton" class=" ml-3 btn btn-circle btn-outline-inventory ">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
+                    <h6 class="mt-2 ml-3 font-weight-bold table-title">Purchase Order</h6>
+                </div>   
             </div>
             <div class="col-md-6">
                 <div class="input-group">
@@ -164,7 +173,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container">
+        <div class="table-responsive scrollable-table-container-lg">
             <table class="table table-bordered custom-mobile-table" id="purchaseorder-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
