--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -40,7 +40,6 @@
     </div>
 </div>
 
-
 <div class="container-fluid">
     <div class="row mb-2">
         <div class="col-lg-12">
@@ -91,6 +90,11 @@
     </div>
 
     <div class="card shadow mb-4 table-size">
+        <div class="progress progress-sm mb-2">
+            <div class="progress-bar" role="progressbar" style="width: 0%"
+                aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+            </div>
+        </div>
         <div class="card-header py-3 header-bg">
             <div class="row">
                 <div class="col-md-6">
