--- a/views/salesdetails/salesdetailsscripts.ejs
+++ b/views/salesdetails/salesdetailsscripts.ejs
@@ -4,6 +4,11 @@
         detailid = '';
 
         populateTable(data);
+        const currentDate = getCurrentDate();
+        const tomorrowDate = getTomorrowDate();
+        $(".progress").hide();
+        $(".progress").slideDown();
+
         $('#salesdetail-dataTable tbody').on('click', 'tr', function () {
             var dataRow = [];
             $(this).closest('tr').find('td').each(function () {
@@ -109,8 +114,6 @@
             }
         }
 
-        const currentDate = getCurrentDate();
-        const tomorrowDate = getTomorrowDate();
         $.ajax({
             url: '/salesdetails/load',
             method: 'POST',
@@ -118,12 +121,24 @@
             data: {
                 dateRange: `${currentDate} to ${tomorrowDate}`
             },
-            success: function (data) {
-                if (data.msg === 'success') {
-                    populateTable(data.data);
-                } else {
-                    console.error(data.msg);
+            xhrFields: {
+                onprogress: function (e) {
+                    if (e.lengthComputable) {
+                        var percentComplete = (e.loaded / e.total) * 100;
+                        $(".progress-bar").css("width", percentComplete + "%");
+                    }
                 }
+            },
+            success: function (data) {
+                setTimeout(function () {
+                    $(".progress").slideUp(function () {
+                        if (data.msg === 'success') {
+                            populateTable(data.data);
+                        } else {
+                            console.error(data.msg);
+                        }
+                    });
+                }, 1000); 
             },
             error: function (error) {
                 console.error(error);
@@ -135,6 +150,8 @@
             const dateRangeValue = $('#dateRange').val();
             const posidValue = $('#posid').val();
 
+            $(".progress").slideDown();
+
             $.ajax({
                 url: '/salesdetails/load',
                 method: 'POST',
@@ -144,24 +161,35 @@
                     dateRange: dateRangeValue,
                     posid: posidValue
                 },
-                success: function (data) {
-                    if (data.msg === 'success') {
-                        $('#shift').val('');
-                        $('#dateRange').val('');
-                        $('#posid').val('');
-                        populateTable(data.data);
-                    } else {
-                        console.error(data.msg);
+                xhrFields: {
+                    onprogress: function (e) {
+                        if (e.lengthComputable) {
+                            var percentComplete = (e.loaded / e.total) * 100;
+                            $(".progress-bar").css("width", percentComplete + "%");
+                        }
                     }
+                },
+                success: function (data) {
+                    setTimeout(function () {
+                        $(".progress").slideUp(function () {
+                            if (data.msg === 'success') {
+                                $('#shift').val('');
+                                $('#dateRange').val('');
+                                $('#posid').val('');
+                                populateTable(data.data);
+                            } else {
+                                console.error(data.msg);
+                            }
+                        });
+                    }, 1000); 
                 },
                 error: function (error) {
                     console.error(error);
                 }
             });
+
         });
 
-
-        // Initialize date range picker
         $('#dateRange').daterangepicker({
             opens: 'left',
             locale: {
