--- a/views/transferorder/transferorder.ejs
+++ b/views/transferorder/transferorder.ejs
@@ -42,117 +42,125 @@
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
     <!-- Content Row -->
-    <div class="row mb-2">
-        <div class="col-lg-12">
-            <div class="card">
-                <div class="card-header py-3 header-bg">
-                    <h6 class="m-0 font-weight-bold">Transfer Order</h6>
-                </div>
-                <div class="card-body extend">
-                    <div class="row mb-2">
-                        <div class="col-md-6">
-                            <div class="row">
-                                <label for="" class="ml-3">Transfer Location</label>
-                            </div>
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="input-group mb-2">
-                                        <div class="input-group-append">
-                                            <span class="input-group-text">From:</span>
-                                        </div>
-                                        <select class="form-control text-center" name="fromlocationlists" id="fromlocationlists">
-                                            <option value="">-- Select Location --</option>
-                                        </select>  
+    <div class="toggle-view">
+        <div class="card mb-2">
+            <div class="card-header py-3 header-bg">
+                <h6 class="m-0 font-weight-bold">Transfer Order</h6>
+            </div>
+            <div class="card-body extend">
+                <div class="row mb-2">
+                    <div class="col-md-6">
+                        <div class="row">
+                            <label for="" class="ml-3">Transfer Location</label>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="input-group mb-2">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">From:</span>
                                     </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="input-group mb-2">
-                                        <div class="input-group-append">
-                                            <span class="input-group-text">To:</span>
-                                        </div>
-                                        <select class="form-control text-center" name="tolocationlists" id="tolocationlists">
-                                            <option value="">-- Select Location --</option>
-                                        </select>  
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="input-group mb-2">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text" id="basic-addon2">Transfer Date</span>
-                                        </div>
-                                        <input id="transferdate" name="transferdate" type="date" class="form-control" placeholder="Enter POS Name" aria-label="orderdate" aria-describedby="basic-addon1">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <textarea class="form-control" id="notes" placeholder="Add Notes" rows="3"></textarea>
-                                </div>
-                            </div>
-                            <div class="row mb-2 mt-2">
-                                <div class="col-8">
-                                    <label class="">Product</label>
-                                    <select class="form-control text-center loading-border" name="productlists" id="productlists">
-                                        <option value="">-- Select here --</option>
+                                    <select class="form-control text-center" name="fromlocationlists" id="fromlocationlists">
+                                        <option value="">-- Select Location --</option>
                                     </select>  
                                 </div>
-                                <div class="col-4">
-                                    <label for="productquantities">Quantity</label>
-                                    <input id="productquantities" name="productquantities" type="text" class="form-control quantity-input" placeholder="Enter Quantity" aria-label="deliverymethod" aria-describedby="basic-addon1">
-                                </div>
                             </div>
-                            <div class="row justify-content-end mb-2">
-                                <div class="col-4">
-                                    <button id="addproduct" name="addproduct" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
-                                        <i class="fa fa-plus" aria-hidden="true"></i>
-                                        ADD
-                                    </button>
+                            <div class="col-6">
+                                <div class="input-group mb-2">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">To:</span>
+                                    </div>
+                                    <select class="form-control text-center" name="tolocationlists" id="tolocationlists">
+                                        <option value="">-- Select Location --</option>
+                                    </select>  
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="table-responsive scrollable-table-container-sm">
-                                <table class="table table-bordered custom-mobile-table" id="products-dataTable" width="100%" cellspacing="10">
-                                    <thead class="table-header">
-                                        <tr>
-                                            <th class = "col-2">Product ID</th> 
-                                            <th class = "col-2">Description</th> 
-                                            <th class = "col-2">Quantity</th>   
-                                            <th class = "col-1">Action</th>        
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                    </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <td colspan="3" class="text-right">Total Quantity:</td>
-                                            <td id="total-quantity" colspan="1">0</td>
-                                        </tr>
-                                    </tfoot>
-                                </table>
-                            </div>
-                            <div class="row justify-content-end">
-                                <div class="col-md-4">
-                                    <button id="submitTransfer" name="submitRequest" class="btn btn-outline-inventory shadow-sm w-100">
-                                        SUBMIT
-                                    </button>
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="input-group mb-2">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon2">Transfer Date</span>
+                                    </div>
+                                    <input id="transferdate" name="transferdate" type="date" class="form-control" placeholder="Enter POS Name" aria-label="orderdate" aria-describedby="basic-addon1">
                                 </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <textarea class="form-control" id="notes" placeholder="Add Notes" rows="3"></textarea>
+                            </div>
+                        </div>
+                        <div class="row mb-2 mt-2">
+                            <div class="col-8">
+                                <label class="">Product</label>
+                                <select class="form-control text-center loading-border" name="productlists" id="productlists">
+                                    <option value="">-- Select here --</option>
+                                </select>  
+                            </div>
+                            <div class="col-4">
+                                <label for="productquantities">Quantity</label>
+                                <input id="productquantities" name="productquantities" type="text" class="form-control quantity-input" placeholder="Enter Quantity" aria-label="deliverymethod" aria-describedby="basic-addon1">
+                            </div>
+                        </div>
+                        <div class="row justify-content-end mb-2">
+                            <div class="col-4">
+                                <button id="addproduct" name="addproduct" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
+                                    <i class="fa fa-plus" aria-hidden="true"></i>
+                                    ADD
+                                </button>
                             </div>
                         </div>
                     </div>
-                </div>      
-            </div>
+                    <div class="col-md-6">
+                        <div class="table-responsive scrollable-table-container-sm">
+                            <table class="table table-bordered custom-mobile-table" id="products-dataTable" width="100%" cellspacing="10">
+                                <thead class="table-header">
+                                    <tr>
+                                        <th class = "col-2">Product ID</th> 
+                                        <th class = "col-2">Description</th> 
+                                        <th class = "col-2">Quantity</th>   
+                                        <th class = "col-1">Action</th>        
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <td colspan="3" class="text-right">Total Quantity:</td>
+                                        <td id="total-quantity" colspan="1">0</td>
+                                    </tr>
+                                </tfoot>
+                            </table>
+                        </div>
+                        <div class="row justify-content-end">
+                            <div class="col-md-4">
+                                <button id="submitTransfer" name="submitRequest" class="btn btn-outline-inventory shadow-sm w-100">
+                                    SUBMIT
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>      
         </div>
     </div>
-
+            
 <!-- DataTales Example -->
-<div class="card shadow mb-4 table-size">
+<div class="card shadow mb-4 table-size-lg">
+    <div class="progress progress-sm mb-2">
+        <div class="progress-bar" role="progressbar" style="width: 0%"
+            aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+        </div>
+    </div>
     <div class="card-header py-3 header-bg">
         <div class="row">
             <div class="col-md-6">
-                <h6 class="mt-2 font-weight-bold table-title">Transfer Order Data:</h6>
+                <div class="row mb-2">
+                    <button id="toggleButton" name="toggleButton" class=" ml-3 btn btn-circle btn-outline-inventory ">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
+                    <h6 class="mt-2 ml-3 font-weight-bold table-title">Transfer Order</h6>
+                </div>   
             </div>
             <div class="col-md-6">
                 <div class="input-group">
@@ -169,7 +177,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container">
+        <div class="table-responsive scrollable-table-container-lg">
             <table class="table table-bordered custom-mobile-table" id="transferorder-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
