--- a/views/transferorder/transferorderscripts.ejs
+++ b/views/transferorder/transferorderscripts.ejs
@@ -186,20 +186,34 @@
         }
     
         function LoadTable() {
+            $(".progress").hide();
+            $(".progress").slideDown();
+
             $.ajax({
                 url: '/transferorder/load',
                 method: 'GET',
                 dataType: 'json',
-                success: function(data) {
-                    console.log(data.data)
-                    if (data.msg === 'success') {
-                        populateTransferOrderTable(data.data);
-                        
-                    } else {
-                        console.error(data.msg);
+                xhrFields: {
+                    onprogress: function (e) {
+                        if (e.lengthComputable) {
+                            var percentComplete = (e.loaded / e.total) * 100;
+                            $(".progress-bar").css("width", percentComplete + "%");
+                        }
                     }
                 },
-                error: function(error) {
+                success: function (data) {
+                    setTimeout(function () {
+                        $(".progress").slideUp(function () {
+                            if (data.msg === 'success') {
+                                console.log(data.data);
+                                populateTransferOrderTable(data.data);
+                            } else {
+                                console.error(data.msg);
+                            }
+                        });
+                    }, 1000);
+                },
+                error: function (error) {
                     console.error(error);
                 }
             });
@@ -478,5 +492,25 @@
     
         $('#search-input').on('input', filterTableRows);
     
+        const toggleButton = document.getElementById("toggleButton");
+        const toggleView = document.querySelector(".toggle-view");
+
+        let isOpen = false; 
+
+        toggleButton.addEventListener("click", function() {
+            if (!isOpen) {
+                toggleView.style.display = "block";
+                toggleView.style.height = toggleView.scrollHeight + "px"; 
+                toggleButton.innerHTML = '<i class="fas fa-chevron-up"></i>';
+            } else {
+                toggleView.style.height = "0";
+                setTimeout(() => {
+                toggleView.style.display = "none";
+                }, 500);
+                toggleButton.innerHTML = '<i class="fas fa-chevron-right"></i>';
+            }
+
+            isOpen = !isOpen;
+        });
     })
 </script>
