Added UI for material count and scripts (save, load)

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -173,7 +173,7 @@
                 <a class="collapse-item" href="/productionmaterials">
                     <span>Materials</span>
                 </a>
-                <a class="collapse-item" href="#">
+                <a class="collapse-item" href="/materialcount">
                     <span>Material Count</span>
                 </a>
                 <a class="collapse-item" href="#">
