--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -32,6 +32,10 @@
 }
 /* Font Styling */
 
+.custom-mt{
+  margin-top: 10px !important;
+}
+
 /* Animation */
 .toggle-view {
   display: none;
@@ -377,6 +381,10 @@ td{
 }
 
 @media (max-width: 767px) {
+  .custom-mt{
+    margin-top: 0px !important;
+  }
+
   .sidebar.toggled {
     transition: width 0.3s;
   }
